--- a/packages/scanner/shared/pubspec.yaml
+++ b/packages/scanner/shared/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.1.0
+  flutter_svg: 2.2.0
   visibility_detector: 0.4.0+2
-  provider: 6.1.4
+  provider: 6.1.5
 
 dev_dependencies:
   flutter_test:
