--- a/packages/smooth_app/pubspec.yaml
+++ b/packages/smooth_app/pubspec.yaml
@@ -13,66 +13,66 @@ dependencies:
     sdk: flutter
 
   async: 2.13.0
-  go_router: 14.7.2
+  go_router: 16.0.0
   barcode_widget: 2.0.4
-  carousel_slider: 5.0.0
+  carousel_slider: 5.1.1
   cupertino_icons: 1.0.8
-  flutter_svg: 2.1.0
+  flutter_svg: 2.2.0
   flutter_map: 8.1.1
   html: 0.15.6
-  flutter_widget_from_html_core: 0.15.2
+  flutter_widget_from_html_core: 0.16.0
   flutter_secure_storage: 9.2.4
   hive: 2.2.3
   hive_flutter: 1.1.0
   http: 1.4.0
   http_parser: 4.1.2
   image_picker: 1.1.2
-  l10n_countries: 1.0.0
+  l10n_countries: 1.1.1
   latlong2: 0.9.1
-  matomo_tracker: 6.0.0-dev.1
-  package_info_plus: 8.2.1
+  matomo_tracker: 6.0.0
+  package_info_plus: 8.3.0
   device_info_plus: 11.5.0
-  permission_handler: 11.3.1
+  permission_handler: 12.0.1
   photo_view: 0.15.0
   uuid: 4.5.1
-  provider: 6.1.4
-  sentry_flutter: 8.14.1
+  provider: 6.1.5
+  sentry_flutter: 9.3.0
   sqflite: 2.4.2
   sqflite_common_ffi: 2.3.6
   url_launcher: 6.3.1
   visibility_detector: 0.4.0+2
-  app_settings: 5.2.0
+  app_settings: 6.1.1
   diacritic: 0.1.6
   app_store_shared:
     path: ../app_store/shared
   audioplayers: 6.5.0
   flutter_email_sender: 7.0.0
-  flutter_native_splash: 2.4.4
-  image: 4.5.2
+  flutter_native_splash: 2.4.6
+  image: 4.5.4
   auto_size_text: 3.0.0
   crop_image: 1.0.16
-  shared_preferences: 2.5.2
+  shared_preferences: 2.5.3
   intl: 0.20.2
   collection: 1.19.1
   path: 1.9.1
   path_provider: 2.1.5
-  share_plus: 10.1.4
+  share_plus: 11.0.0
   fimber: 0.7.0
   shimmer: ^3.0.0
   rive: 0.13.20
-  webview_flutter: 4.10.0
+  webview_flutter: 4.13.0
   webview_flutter_android: 4.7.0
-  webview_flutter_wkwebview: 3.16.3
-  flutter_custom_tabs: 2.1.0
+  webview_flutter_wkwebview: 3.22.0
+  flutter_custom_tabs: 2.4.0
   flutter_image_compress: 2.4.0
-  connectivity_plus: 6.1.2
+  connectivity_plus: 6.1.4
   dart_ping: 9.0.1
   dart_ping_ios: 4.0.2
   flutter_animation_progress_bar: 2.3.1
   email_validator: 3.0.0
   sliver_tools: 0.2.12
   cached_network_image: 3.4.1
-  file_picker: 8.1.7
+  file_picker: 10.2.0
   animated_line_through: 1.0.5
   mobkit_dashed_border: 0.0.8
 
@@ -90,7 +90,7 @@ dependencies:
   # We use two different scanning engines, 
   # mobile scanner powered by ML Kit for the Play Store and Apple App Store,
   # but qr_code_scanner which uses the open source ZXing for F-Droid
-  camera: 0.11.1
+  camera: 0.11.2
   
   scanner_shared:
     path: ../scanner/shared
@@ -113,7 +113,7 @@ dev_dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  mockito: 5.4.5
+  mockito: 5.4.6
   path_provider_platform_interface: 2.1.2
   plugin_platform_interface: 2.1.8
   flutter_lints: 6.0.0
