--- a/.github/workflows/dartdoc.yml
+++ b/.github/workflows/dartdoc.yml
@@ -1,6 +1,6 @@
-permissions:
-  contents: read
-  pages: write
+#permissions:
+#  contents: read
+#  pages: write
 name: GitHub Pages Deploy Action
 on:
     push:
