ci: Update workflow names and commit titles

--- a/.github/workflows/regenerate-translations.yml
+++ b/.github/workflows/regenerate-translations.yml
@@ -66,7 +66,7 @@ jobs:
           flutter pub global list | grep intl_utils
 
       # Generate translation files
-      - name: "chore: 🌐 Generate translation files"
+      - name: "🌐 Generate translation files"
         run: |
           cd packages/smooth_app
           echo "Current directory: $(pwd)"
@@ -101,7 +101,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: 'chore: regenerate translation files'
-          title: '🌐 Regenerate translation files'
+          title: 'chore: 🌐 Regenerate translation files'
           body: |
             This PR was automatically created to regenerate Flutter translation files after changes to ARB files.
             
