iOS 26 app icon (#7068)

--- a/packages/smooth_app/ios/Podfile
+++ b/packages/smooth_app/ios/Podfile
@@ -1,5 +1,6 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '15.5'
+source 'https://github.com/CocoaPods/Specs.git'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
