ci: Update folksonomy section in labeler configuration

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -352,7 +352,7 @@ moderation:
   - any-glob-to-any-file: 'packages/smooth_app/lib/pages/product/report_product/report_product_header.dart'
   - any-glob-to-any-file: 'packages/smooth_app/lib/pages/product/report_product/report_product_page.dart'
 
-folksonomy:
+folksonomy engine:
 - changed-files:
   - any-glob-to-any-file: 'packages/smooth_app/lib/pages/folksonomy/folksonomy_page.dart'
   - any-glob-to-any-file: 'packages/smooth_app/lib/pages/folksonomy/folksonomy_provider.dart'
