feat: Improvements for the Language Selector (#7133)
* Improvements for the Language Selector

* Also for the product name

--- a/packages/smooth_app/assets/fonts/icons/config.json
+++ b/packages/smooth_app/assets/fonts/icons/config.json
@@ -4043,6 +4043,34 @@
       "search": [
         "toolbox"
       ]
+    },
+    {
+      "uid": "ccb59ab249b733d905458c2cffab7afb",
+      "css": "favorite_check",
+      "code": 59477,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 0C776.1 0 1000 223.9 1000 500 1000 776.1 776.1 1000 500 1000 223.9 1000 0 776.1 0 500 0 223.9 223.9 0 500 0ZM735.9 321C720.3 309.8 698.3 311.2 684.2 325.3L419.9 589.5 316.1 485.8C300.5 470.1 275 470.1 259.4 485.8L255.2 490.7C243.9 506.4 245.3 528.4 259.4 542.5L391.5 674.7C407.2 690.3 432.6 690.3 448.3 674.7L740.9 382C756.6 366.4 756.6 340.9 740.9 325.3Z",
+        "width": 1000
+      },
+      "search": [
+        "favorite_check"
+      ]
+    },
+    {
+      "uid": "612eb1b30aeaea48953d992ef43c6af8",
+      "css": "favorite_star",
+      "code": 59479,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 0C776.1 0 1000 223.9 1000 500 1000 776.1 776.1 1000 500 1000 223.9 1000 0 776.1 0 500 0 223.9 223.9 0 500 0ZM521 236.2C513.2 217.7 487.1 217.7 479.3 236.2L412.8 393.4 242.5 407.9C222.6 409.6 214.5 434.6 229.6 447.7L358.7 559.4 319.9 726C315.4 745.5 336.5 760.9 353.7 750.5L500.1 662.2 646.6 750.5C663.7 760.9 684.9 745.5 680.4 726L641.6 559 770.6 447.3C785.7 434.1 777.6 409.2 757.7 407.5L587.4 393Z",
+        "width": 1000
+      },
+      "search": [
+        "favorite_star"
+      ]
     }
   ]
 }
