fix: 7146 - support google play 16k memory page (#7154)

--- a/packages/smooth_app/android/gradle.properties
+++ b/packages/smooth_app/android/gradle.properties
@@ -1,4 +1,7 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-kotlin.jvm.target.validation.mode = IGNORE
+kotlin.jvm.target.validation.mode=IGNORE
+# cf. https://github.com/rive-app/rive-flutter/issues/553
+rive.ndk.version=28.1.13356709
+android.ndk.suppressMinSdkVersionError=21
