--- a/.github/workflows/translation-validation.yml
+++ b/.github/workflows/translation-validation.yml
@@ -3,7 +3,6 @@ name: Translation Validation
 permissions:
   contents: read
   pull-requests: write
-
 on:
   pull_request:
     paths:
@@ -13,7 +12,8 @@ on:
 jobs:
   validate-translations:
     runs-on: ubuntu-latest
-    
+    if: |
+      github.event.pull_request.head.repo.fork == false
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
