ci: Move Rive dependency setup to a new location

--- a/.github/workflows/ios-release-to-org-openfoodfacts-scanner.yml
+++ b/.github/workflows/ios-release-to-org-openfoodfacts-scanner.yml
@@ -83,9 +83,6 @@ jobs:
       - name: Enable Apple App Store dependency
         run: chmod +x ci/dependencies/app_store/enable_apple_app_store_dependency.sh && ci/dependencies/app_store/enable_apple_app_store_dependency.sh
 
-      - name: Enable Rive dependency
-        run: dart run rive_native:setup --verbose --clean --platform ios
-
       - name: Get dependencies
         run: ci/pub_get.sh
       
@@ -107,6 +104,9 @@ jobs:
         env:
           VERSION_NAME: ${{ inputs.VERSION_NAME }}
           VERSION_CODE: ${{ inputs.VERSION_CODE }}
+
+      - name: Enable Rive dependency
+        run: cd ./packages/smooth_app && dart run rive_native:setup --verbose --clean --platform ios
 
       - name: Build app
         run: cd ./packages/smooth_app && cd ios && rm -rf Pods && rm -f Podfile.lock && flutter pub get && pod install && cd .. && flutter build ios --release --no-codesign -t lib/entrypoints/ios/main_ios.dart
