ci: Add price_proof_page.dart to labeler configuration

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -325,6 +325,7 @@ Prices:
       - any-glob-to-any-file: 'packages/smooth_app/lib/pages/onboarding/currency_selector.dart'
       - any-glob-to-any-file: 'packages/smooth_app/lib/pages/onboarding/currency_selector_helper.dart'
       - any-glob-to-any-file: 'packages/smooth_app/lib/pages/prices/prices_proofs_page.dart'
+      - any-glob-to-any-file: 'packages/smooth_app/lib/pages/prices/price_proof_page.dart'
 
 router:
   - changed-files:
