--- a/.github/workflows/postsubmit.yml
+++ b/.github/workflows/postsubmit.yml
@@ -12,6 +12,10 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: Free disk space on runner
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /opt/ghc
+          df -h    
       - name: "Checkout code"
         uses: actions/checkout@v5
 
