Migration to Flutter 3.38 (#7312)

--- a/packages/smooth_app/android/gradle.properties
+++ b/packages/smooth_app/android/gradle.properties
@@ -1,7 +1,4 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.jvm.target.validation.mode=IGNORE
-# cf. https://github.com/rive-app/rive-flutter/issues/553
-rive.ndk.version=28.1.13356709
-android.ndk.suppressMinSdkVersionError=21
