--- a/packages/scanner/ml_kit/pubspec.yaml
+++ b/packages/scanner/ml_kit/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: "none"
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.10.4
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
 
   visibility_detector: 0.4.0+2
   async: 2.13.0
-  provider: 6.1.5
+  provider: ^6.1.5+1
 
   mobile_scanner: 6.0.10
   torch_light: 1.1.0
