--- a/packages/scanner/shared/pubspec.yaml
+++ b/packages/scanner/shared/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0
 publish_to: "none"
 
 environment:
-  sdk: ^3.9.0
+  sdk: ^3.10.4
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.2.1
+  flutter_svg: ^2.2.3
   visibility_detector: 0.4.0+2
-  provider: 6.1.5
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
