feat: 6916 - nutrients for pet food (and human food of course) (#7309)
Impacted files:
* `knowledge_panel_page.dart`: unrelated handling of the new 'null title' case
* `knowledge_panel_title_card.dart`: unrelated handling of the new 'null title' case
* `knowledge_panels_builder.dart`: unrelated handling of the new 'null title' case
* `nutrition_page_loader.dart`: now using the productType for the nutrient table
* `ordered_nutrients_cache.dart`: now caching nutrient tables according to `productType`
* `portion_calculator.dart`: now using the productType for the nutrient table
* `product_list_item_popup_items.dart`: now using the productType for the nutrient table, here always food - to be fixed if/when relevant
* `pubspec.lock`: wtf
* `pubspec.yaml`: upgrade to openfoodfacts 3.29.0
* `score_card.dart`: unrelated handling of the new 'null title' case

--- a/packages/smooth_app/pubspec.yaml
+++ b/packages/smooth_app/pubspec.yaml
@@ -103,7 +103,9 @@ dependencies:
     path: ../scanner/zxing
 
 
-  openfoodfacts: 3.28.0
+  openfoodfacts: 3.29.0
+  # openfoodfacts:
+  #   path: ../../../openfoodfacts-dart
 
 dev_dependencies:
   integration_test:
